# moq-bench

./: CMakeLists.txt  README.md
examples/: config-av-1080.ini
include/: moqbench.hpp  publisher_track_handler.hpp  subscriber_track_handler.hpp
scripts/: analyze_sub_logs.py  run_parallel_meetings.sh  run_parallel_subs.sh
src/: meeting.cpp  pub.cpp  publisher_track_handler.cpp  sub.cpp  subscriber_track_handler.cpp
